--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Your Web App</title>
+  <title>White Apple 🍎💦</title>
   <link rel="manifest" href="manifest.json">
+  <style>
+    body {
+      font-family: 'Open Sans', sans-serif;
+      background-color: #201c1c;
+      color: white;
+      font-size: 20px;
+    }
+  </style>
   <script>
     // Fetch the title of the real.html page
     fetch('/real.html')
@@ -10,7 +18,7 @@
       .then(html => {
         // Extract the title from the HTML content
         const titleMatch = html.match(/<title>(.*?)<\/title>/);
-        const pageTitle = titleMatch ? titleMatch[1] : 'Your Web App';
+        const pageTitle = titleMatch ? titleMatch[1] : 'White Apple 🍎💦';
 
         // Set the web app title dynamically
         document.title = pageTitle;
@@ -24,15 +32,31 @@
 
         // Show the steps to add as a web app if on iOS or Android
         if ((isIOS || isAndroid) && !isStandalone) {
-          document.body.innerHTML = `
-            <h1>Add Web App</h1>
-            <div>
-              <p>To add this web app to your home screen:</p>
+          let instructions = '';
+
+          if (isIOS) {
+            instructions = `
+              <h3>TO DOWNLOAD APP (iOS)</h3>
               <ul>
-                <li>On iOS: Tap the Share icon and select "Add to Home Screen".</li>
-                <li>On Android: Tap the Menu icon and select "Add to Home screen".</li>
+                <li>1. Tap the Share icon.</li>
+                <li>2. Select "Add to Home Screen".</li>
               </ul>
-              <p>If you prefer not to add it as a web app, you can <a href="/real.html">continue to the web app</a>.</p>
+            `;
+          } else if (isAndroid) {
+            instructions = `
+              <h3>TO DOWNLOAD APP (android)</h3>
+              <ul>
+                <li>1. Tap the menu icon</li>
+                <li>2. Select "Add to Home screen" OR "Install App".</li>
+              </ul>
+            `;
+          }
+
+          document.body.innerHTML = `
+            <h1>WHITE APPLE 🍎💦 WEB APP!</h1>
+            <div>
+              ${instructions}
+              <p>Don't want to install? Web version --> <a href="/real.html">HERE!</a></p>
             </div>
           `;
         } else {
