--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-// THIS IS A WHITE APPLE WEB APP! -> https://github.com/fish-eater/whiteapplewebapp
-    // made by fisheater with love <3
-                                      
-                                      
 <!DOCTYPE html>
+
+<!-- THIS IS A WHITE APPLE WEB APP! (https://github.com/fish-eater/whiteapplewebapp)  -->
+<!--            made by fisheater with love <3        -->
 <html>
 <head>
   <title>My Web App</title>
