--- a/real.html
+++ b/real.html
@@ -9,7 +9,7 @@
   <title>FNAJ (v2.1)</title>
   <style>
     body {
-      color: #9a9996;
+      color: #77767b;
       font-family: sans-serif;
       overflow: hidden;
       margin: 0;
